--- a/_data/pageconfig/solutions.yaml
+++ b/_data/pageconfig/solutions.yaml
@@ -379,23 +379,24 @@ pages:
 
   salesforce-development.md:
     title: Salesforce Development
-    tagline: "Elevate Your Salesforce Journey: Bespoke Development Solutions"
+    tagline: "Enhance Your CRM Journey: AxOps&#8482; Salesforce Development Solutions"
+    main_image: /assets/img/illustrations/custom/solutions-salesforce-development.jpg
     outcome_image: /assets/img/icons/lineal/target.svg
     obstacle_image: /assets/img/icons/lineal/puzzle.svg
 
     desired_outcomes:
       - category: Streamlined Integrations
-        description: Effortlessly connect diverse systems with tailored Salesforce solutions, enhancing collaboration and data flow.
+        description: Connect diverse systems with tailored solutions, enhancing collaboration and data exchange.
       - category: Robust Customisations
-        description: Empower your organisation with bespoke Salesforce applications, tailored to your unique business requirements.
+        description: Empower your organisation with bespoke applications, tailored to your unique requirements.
       - category: Increased Productivity
-        description: Optimise workflows and automate processes to save time, increase efficiency, and boost overall performance.
+        description: Optimise workflows and automate processes to improve efficiency, and boost performance.
       - category: Enhanced User Experience
-        description: Deliver a seamless and engaging user experience by harnessing Salesforce's cutting-edge development capabilities.
+        description: Deliver seamless and engaging user experience by leveraging custom development solutions.
       - category: Scalable Solutions
-        description: Build future-proof Salesforce applications that grow with your business, ensuring long-term success and adaptability.
+        description: Build future-proof applications that grow with the rest of your organisation's IT infrastructure.
       - category: Data-Driven Insights
-        description: Leverage Salesforce analytics to make informed decisions, drive innovation, and unlock new opportunities.
+        description: Bespoke data analytics to inform decision-making, drive innovation, and unlock new opportunities.
 
     common_obstacles:
       - category: Inadequate Technical Expertise
