--- a/_data/pageconfig/solutions.yaml
+++ b/_data/pageconfig/solutions.yaml
@@ -194,7 +194,8 @@ pages:
     
   project-management.md:
     title: Project Management
-    tagline: "AxOps&#8482; Project Management Services: Streamlined Projects, Realised Visions &#127919;"
+    tagline: "Deliver Projects, Realise Visions: with AxOps&#8482; Project Management Services"
+    main_image: /assets/img/illustrations/custom/solutions-project-management.jpg
     outcome_image: /assets/img/icons/lineal/target.svg
     obstacle_image: /assets/img/icons/lineal/puzzle.svg
 
