updated team creatives in yaml

--- a/_data/pageconfig/technologies.yaml
+++ b/_data/pageconfig/technologies.yaml
@@ -13,6 +13,10 @@ pages:
           - Optimised operational efficiency and reduced costs
           - Streamlined processes with bespoke data-driven strategies
           - Fostered innovation and competitive advantage
+      
+      predictive-analytics:
+        title: Predictive Analytics Solutions
+        
 
 
 
