updated permalinks + dedicated categories

--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -3,8 +3,8 @@ tagline_dynamic: at reduced CapEx, at optimal OpEx, at infinite scale, on your t
 tagline_dynamic_delay: 75
 tagline_cta: Paying too much for licensing? Need a bespoke solution without the vendor lock-in? Considering the Cloud but lack the in-house expertise?
 
-button_cta1_text: Case Studies
-button_cta1_url: #
+button_cta1_text: Solutions
+button_cta1_url: /our-solutions
 
 button_cta2_text: Let's Talk!
 button_cta2_url: #
