--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -8,7 +8,7 @@
 
 -
   name: Solutions
-  url: /solutions
+  url: /our-solutions
   current: false
   enabled: true
   has_children: false
@@ -136,7 +136,7 @@
           
 -
   name: Technologies
-  url: /technologies
+  url: /supported-technologies
   current: false
   enabled: true
   has_children: true
