added more dedicated categories + yaml

--- a/_data/pageconfig/technologies.yml
+++ b/_data/pageconfig/technologies.yml
@@ -25,7 +25,7 @@ pages:
 
   technologies-data-management.md:
     title: Data Management
-    tagline: "AxOps&#8482; Data Management: Secure, Agile, and Efficient Cloud Solutions"
+    tagline: "AxOps&#8482; Data Management: Secure, Agile, and Efficient Data Solutions"
 
     services:
       database-migration:
