--- a/_data/pageconfig/our-technologies.yml
+++ b/_data/pageconfig/our-technologies.yml
@@ -1,5 +1,5 @@
 tagline_intro: Supported Technologies
-tagline_main: Unlock Productivity & Performance with AxOps™ Technologies
+tagline_main: Accelerate Growth & Performance with AxOps™ Technologies
 site_url: https://localhost:4000
 members:
   -
