--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ _site
 _posts
 _drafts
 docs
+assets/img/partners/cintra*
+assets/img/partners/original
 assets/img/photos/custom
 assets/img/photos/team/*.psd
 assets/img/photos/team/*.png
